go to contact end

--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,7 @@
             <img class="reference__logo" src="images/firmy/miwro.png " alt="logo firmy miwro ">
             <img class="reference__logo" src="images/firmy/fitting.png " alt="logo firmy fitting ">
             <img class="reference__logo" src="images/firmy/elkom.png " alt="log firmy elkom ">
-            <img class="reference__logo" src="images/firmy/wg.jpg " alt="logo firmy wajergaz ">
+            <img class="reference__logo2"  src="images/firmy/wg.jpg " alt="logo firmy wajergaz ">
         </section>
 
         <!-- qualifications -->
@@ -136,59 +136,62 @@
             <h2 class="qualifications__headers">uprawnienia</h2>
             <figure class="qualifications__doc">
                 <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
-                <figcaption  class="qualifications__doc__figcaption">Paweł Bagiński  zakres 1, 4</figcaption>
+                <figcaption  class="qualifications__doc__figcaption">Paweł Bagiński <br>  zakres 1, 4</figcaption>
             </figure>
             <figure class="qualifications__doc">
                 <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
-                <figcaption class="qualifications__doc__figcaption">Sławomir Gosek  zakres 1</figcaption>
+                <figcaption class="qualifications__doc__figcaption">Sławomir Gosek <br>  zakres 1</figcaption>
             </figure>
             <figure class="qualifications__doc">
                 <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
-                <figcaption class="qualifications__doc__figcaption">Jacek Aszurkiewicz  zakres 1</figcaption>
+                <figcaption class="qualifications__doc__figcaption">Jacek Aszurkiewicz <br> zakres 1</figcaption>
             </figure>
         </section>
+
+        <!-- CONTACT -->
+
         <section class="contact " id="contact ">
-            <h2>kontakt</h2>
-            <img class="header__logo " src="images/logo.jpg " alt="logo firmy geokart ">
-            <h3>Usługi Geodezyjne i Kartograficzne<br/>
+            <h2 class="contact__header">kontakt</h2>
+            <img class="contact__logo " src="images/logo.jpg " alt="logo firmy geokart ">
+            <h3 class="contact__company">Usługi Geodezyjne i Kartograficzne<br/>
                         GEO-KART S.C.</h3>
-            <address>
-                <span><b>Adres:</b>ul. Kozanowska 75/14 Wrocław</span>
-                <span><b>biuro:</b>ul. Żegiestowska 11 Wrocław</span>
-                <span><b>nip:</b>894-302-25-80 <b>regon:</b>021538810</span>
-                <span><b>konto:</b>Alior Bank S.A. - 37 2490 0005 0000 4500 3180 0289</span>
+            <address class="contact__address">
+                <span class="address__elem"><b>Adres:</b>ul. Kozanowska 75/14 Wrocław</span>
+                <span class="address__elem"><b>biuro:</b>ul. Żegiestowska 11 Wrocław</span>
+                <span class="address__elem"><b>nip:</b>894-302-25-80 <b>regon:</b>021538810</span>
+                <span class="address__elem"><b>konto:</b>Alior Bank S.A. - 37 2490 0005 0000 4500 3180 0289</span>
             </address>
-            <h4>godziny otwarcia biura</h4>
-            <ul>
+            <h4 class="contact__office__header">godziny otwarcia biura</h4>
+            <ul class="office__days">
                 <li>Poniedziałek - Piątek 7:00-15:00</li>
                 <li>Sobota - Niedziela <span>nieczynne</span> </li>
                 <li>Istnieje również możliwość umówienia spotkania poza godzinami otwarcia biura – po wcześniejszym uzgodnieniu terminu.</li>
             </ul>
-            <div>mapa
+            <div class="contact__map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10025.814249287829!2d17.0381912!3d51.0816365!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6377dc126be96c76!2sGEO-KART+S.C.!5e0!3m2!1spl!2spl!4v1501489939982 " width="100% " height="auto " frameborder="0 " style="border:0 " allowfullscreen></iframe>
             </div>
-            <div class=" ">
+            <div class="contact__info">
                 <p>Zapraszamy do wsółpracy, prosimy o kontakt telefoniczny bądź mailowy:</p>
-                <div>
+                <div class="contact__details">
                     <p>mgr
                         <br> Paweł Bagiński</p>
-                    <div>
+                    <div class="contact__details--hidden">
                         <a href="tel:+48509429750 " title=" ">509-429-750</a>
                         <a href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">pawel.baginski.geokart@gmail.com</a>
                     </div>
                 </div>
-                <div>
+                <div class="contact__details">
                     <p>mgr inż.
                         <br> Jacek Aszurkiewicz</p>
-                    <div>
+                    <div class="contact__details--hidden">
                         <a href="tel:+48509429750 " title=" ">660-614-468</a>
                         <a href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">jacek.aszurkiewicz@gmail.com</a>
                     </div>
                 </div>
-                <div>
+                <div class="contact__details">
                     <p>mgr
                         <br> Sławomir Gosek</p>
-                    <div>
+                    <div class="contact__details--hidden">
                         <a href="tel:+48509429750 " title=" ">501-466-370</a>
                         <a href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">slawek.gosek@gmail.com</a>
                     </div>
