update contact and footer

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
 <body>
     <header>
         <img class="header__logo" src="images/logo.png" alt="logo firmy geokart">
+        <span class="fa fa-facebook-square header__social" aria-hidden="true"></span>
         <button class="header__menu__btn title="otwórz menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
         <nav class="header__menu">
                 <a href="#slide" title="strona główna">home</a>
@@ -152,55 +153,55 @@
 
         <section class="contact " id="contact ">
             <h2 class="contact__header">kontakt</h2>
-            <img class="contact__logo " src="images/logo.jpg " alt="logo firmy geokart ">
+            <img class="contact__logo " src="images/logo.png" alt="logo firmy geokart ">
             <h3 class="contact__company">Usługi Geodezyjne i Kartograficzne<br/>
                         GEO-KART S.C.</h3>
             <address class="contact__address">
                 <span class="address__elem"><b>Adres:</b>ul. Kozanowska 75/14 Wrocław</span>
                 <span class="address__elem"><b>biuro:</b>ul. Żegiestowska 11 Wrocław</span>
                 <span class="address__elem"><b>nip:</b>894-302-25-80 <b>regon:</b>021538810</span>
-                <span class="address__elem"><b>konto:</b>Alior Bank S.A. - 37 2490 0005 0000 4500 3180 0289</span>
+                <span class="address__elem"><b>konto:</b>Alior Bank S.A. <br> 37 2490 0005 0000 4500 3180 0289</span>
             </address>
             <h4 class="contact__office__header">godziny otwarcia biura</h4>
             <ul class="office__days">
                 <li>Poniedziałek - Piątek 7:00-15:00</li>
                 <li>Sobota - Niedziela <span>nieczynne</span> </li>
-                <li>Istnieje również możliwość umówienia spotkania poza godzinami otwarcia biura – po wcześniejszym uzgodnieniu terminu.</li>
+                <li>&#42;Istnieje również możliwość umówienia spotkania poza godzinami otwarcia biura – po wcześniejszym uzgodnieniu terminu.</li>
             </ul>
             <div class="contact__map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10025.814249287829!2d17.0381912!3d51.0816365!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6377dc126be96c76!2sGEO-KART+S.C.!5e0!3m2!1spl!2spl!4v1501489939982 " width="100% " height="auto " frameborder="0 " style="border:0 " allowfullscreen></iframe>
             </div>
             <div class="contact__info">
-                <p>Zapraszamy do wsółpracy, prosimy o kontakt telefoniczny bądź mailowy:</p>
+                <p>Zapraszamy do wsółpracy, <br>prosimy o kontakt telefoniczny bądź mailowy:</p>
                 <div class="contact__details">
-                    <p>mgr
+                    <p class="contact__name">mgr
                         <br> Paweł Bagiński</p>
                     <div class="contact__details--hidden">
-                        <a href="tel:+48509429750 " title=" ">509-429-750</a>
-                        <a href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">pawel.baginski.geokart@gmail.com</a>
+                        <a class="details__link" href="tel:+48509429750 " title=" ">509-429-750</a><br>
+                        <a class="details__link" href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">pawel.baginski.geokart@gmail.com</a>
                     </div>
                 </div>
                 <div class="contact__details">
-                    <p>mgr inż.
+                    <p class="contact__name">mgr inż.
                         <br> Jacek Aszurkiewicz</p>
                     <div class="contact__details--hidden">
-                        <a href="tel:+48509429750 " title=" ">660-614-468</a>
-                        <a href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">jacek.aszurkiewicz@gmail.com</a>
+                        <a class="details__link" href="tel:+48509429750 " title=" ">660-614-468</a><br>
+                        <a class="details__link" href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">jacek.aszurkiewicz@gmail.com</a>
                     </div>
                 </div>
                 <div class="contact__details">
-                    <p>mgr
+                    <p class="contact__name">mgr
                         <br> Sławomir Gosek</p>
                     <div class="contact__details--hidden">
-                        <a href="tel:+48509429750 " title=" ">501-466-370</a>
-                        <a href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">slawek.gosek@gmail.com</a>
+                        <a class="details__link" href="tel:+48509429750 " title=" ">501-466-370</a><br>
+                        <a class="details__link" href="mailto:pawel.baginski.geokart@gmail.com%20?subject=Zapytanie_ofertowe ">slawek.gosek@gmail.com</a>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer>
-        <span>2017 Michał Maleszewski | All Right Reserved</span>
+    <footer class="footer">
+        <div class="footer__info">2017 Michał Maleszewski | All Right Reserved</div>
     </footer>
 </body>
 
