--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
 <body>
     <header>
         <img class="header__logo" src="images/logo.png" alt="logo firmy geokart">
-        <button class="header__menu__btn title="otwórz menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
+        <button class="header__btn title="otwórz menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
         <nav class="header__menu">
                 <a href="#slide" title="strona główna">home</a>
                 <a href=" ">o firmie</a>
@@ -59,16 +59,16 @@
             <p class="slide__info2">Rozpoczecie działalności 2006 r.</p>
         </section>
         <section class="company " id="company ">
-            <h2 class="company__header">o firmie</h2>
+            <h2 class="section__header">o firmie</h2>
             <article class="company__article ">
                 Jesteśmy profesjonalnym i kompetentnym zespołem geodetów posiadającym kilkunastoletnie doświadczenie w branży geodezyjnej, które zaowocowało złożeniem w 2006 roku firmy GEO-KART S.C.
-                <br> Świadczymy usługi geodezyjne dla firm budowlanych, instalacyjnych, biur projektowych, urzędów miast i gmin oraz osób prywatnych na terenie Wrocławia i okolicznych powiatów.
+                <br> Świadczymy usługi geodezyjne dla firm budowlanych, instalacyjnych, biur projektowych, oraz osób prywatnych na terenie Wrocławia i okolicznych powiatów.
                 <br> Posiadamy uprawnienia (zakres 1,4) do prowadzenia obsługi inwestycji budowlanych, sporządzania map powykonawczych oraz do celów projektowych.
                 <br> Odpowiednie wykształcenie i kilkunastoletnia praktyka w zawodzie gwarantują wykonanie każdego zlecenia na najwyższym poziomie.
             </article>
             <article class="company__article2 ">
                 Pomiary wykonujemy w krótkich terminach, dokumentację odbieramy i dostarczamy do rąk zleceniodawcy. Niezawodność i terminowość sprawiają, iż współpraca z nami jest korzystna nie tylko z aspektu ekonomicznego, ale również jest czystą przyjemnością.
-                <br /> Zapewniamy nowoczesne rozwiązania geodezyjno kartograficzne dostosowane do Państwa potrzeb
+                <br /> Zapewniamy nowoczesne rozwiązania geodezyjno kartograficzne dostosowane do Państwa potrzeb.
             </article>
             <article>
                 <h3 class="company__article__header ">Wykonujemy</h3>
@@ -89,7 +89,7 @@
             </article>
         </section>
         <section class="realizations " id="realizations ">
-            <h2 class="realizations__header ">realizacje</h2>
+            <h2 class="section__header ">realizacje</h2>
             <article>
                 <p>ZAUFAŁO NAM WIELE FIRM I KLIENTÓW INDYWIDUALNYCH
                     <br> potwierdza to uczestnictwo przy większych realizacjach:</p>
@@ -117,7 +117,7 @@
             </article>
         </section>
         <section class="reference " id="reference ">
-            <h2 class="reference__header">referencje</h2>
+            <h2 class="section__header">referencje</h2>
             <p>Firmy z którymi współpracujemy:</p>
             <img class="reference__logo" src="images/firmy/skanska.png " alt="logo firmy skanska ">
             <img class="reference__logo" src="images/firmy/pebud.png " alt="logo firmy pebud ">
@@ -133,23 +133,25 @@
         <!-- qualifications -->
 
         <section class="qualifications " id="qualifications ">
-            <h2 class="qualifications__headers">uprawnienia</h2>
+            <h2 class="section__header">uprawnienia</h2>
             <figure class="qualifications__doc">
-                <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
-                <figcaption  class="qualifications__doc__figcaption">Paweł Bagiński  zakres 1, 4</figcaption>
+                <p>Główny geodeta karaju</p>
+                <p>świadectwo</p>
+                <p>nadania uprawnień w dziedzinie geodezji i kartografii</p>
+                <figcaption> <a href="images/firmy/t1.png">Paweł Bagiński  zakres 1, 4</a></figcaption>
             </figure>
             <figure class="qualifications__doc">
-                <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
+                
                 <figcaption class="qualifications__doc__figcaption">Sławomir Gosek  zakres 1</figcaption>
             </figure>
             <figure class="qualifications__doc">
-                <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
+               
                 <figcaption class="qualifications__doc__figcaption">Jacek Aszurkiewicz  zakres 1</figcaption>
             </figure>
         </section>
         <section class="contact " id="contact ">
-            <h2>kontakt</h2>
-            <img class="header__logo " src="images/logo.jpg " alt="logo firmy geokart ">
+            <h2 class="section__header">kontakt</h2>
+            <img class="contact__logo " src="images/logo.jpg " alt="logo firmy geokart ">
             <h3>Usługi Geodezyjne i Kartograficzne<br/>
                         GEO-KART S.C.</h3>
             <address>
