--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,13 @@
             <h1 class="slide__header">geo-kart s.c.</h1>
             <p class="slide__info">Od ponad 15 lat zajmujemy się realizacjami prac geodezyjnych</p>
             <p class="slide__info2">Rozpoczecie działalności 2006 r.</p>
+
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+    <polygon class="svg--sm" fill="#8F989B" points="0,0 30,100 65,21 90,100 100,75 100,100 0,100"/>
+    <polygon class="svg--lg" fill="#8F989B" points="0,0 15,100 33,21 45,100 50,75 55,100 72,20 85,100 95,50 100,80 100,100 0,100" />
+  </svg>
+
+
         </section>
         <section class="company " id="company ">
             <h2 class="company__header">o firmie</h2>
@@ -129,6 +136,9 @@
             <img class="reference__logo" src="images/firmy/fitting.png " alt="logo firmy fitting ">
             <img class="reference__logo" src="images/firmy/elkom.png " alt="log firmy elkom ">
             <img class="reference__logo2"  src="images/firmy/wg.jpg " alt="logo firmy wajergaz ">
+
+
+
         </section>
 
         <!-- qualifications -->
@@ -147,6 +157,10 @@
                 <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
                 <figcaption class="qualifications__doc__figcaption">Jacek Aszurkiewicz <br> zakres 1</figcaption>
             </figure>
+
+            <svg class="skos" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+    <polygon fill="#395C68" points="0,100 100,0 100,100"/>
+  </svg>
         </section>
 
         <!-- CONTACT -->
