--- a/app/index.html
+++ b/app/index.html
@@ -42,12 +42,8 @@
 <body>
     <header>
         <img class="header__logo" src="images/logo.png" alt="logo firmy geokart">
-<<<<<<< HEAD
         <span class="fa fa-facebook-square header__social" aria-hidden="true"></span>
         <button class="header__menu__btn title="otwórz menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
-=======
-        <button class="header__btn title="otwórz menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
->>>>>>> master
         <nav class="header__menu">
                 <a href="#slide" title="strona główna">home</a>
                 <a href=" ">o firmie</a>
@@ -71,16 +67,16 @@
 
         </section>
         <section class="company " id="company ">
-            <h2 class="section__header">o firmie</h2>
+            <h2 class="company__header">o firmie</h2>
             <article class="company__article ">
                 Jesteśmy profesjonalnym i kompetentnym zespołem geodetów posiadającym kilkunastoletnie doświadczenie w branży geodezyjnej, które zaowocowało złożeniem w 2006 roku firmy GEO-KART S.C.
-                <br> Świadczymy usługi geodezyjne dla firm budowlanych, instalacyjnych, biur projektowych, oraz osób prywatnych na terenie Wrocławia i okolicznych powiatów.
+                <br> Świadczymy usługi geodezyjne dla firm budowlanych, instalacyjnych, biur projektowych, urzędów miast i gmin oraz osób prywatnych na terenie Wrocławia i okolicznych powiatów.
                 <br> Posiadamy uprawnienia (zakres 1,4) do prowadzenia obsługi inwestycji budowlanych, sporządzania map powykonawczych oraz do celów projektowych.
                 <br> Odpowiednie wykształcenie i kilkunastoletnia praktyka w zawodzie gwarantują wykonanie każdego zlecenia na najwyższym poziomie.
             </article>
             <article class="company__article2 ">
                 Pomiary wykonujemy w krótkich terminach, dokumentację odbieramy i dostarczamy do rąk zleceniodawcy. Niezawodność i terminowość sprawiają, iż współpraca z nami jest korzystna nie tylko z aspektu ekonomicznego, ale również jest czystą przyjemnością.
-                <br /> Zapewniamy nowoczesne rozwiązania geodezyjno kartograficzne dostosowane do Państwa potrzeb.
+                <br /> Zapewniamy nowoczesne rozwiązania geodezyjno kartograficzne dostosowane do Państwa potrzeb
             </article>
             <article>
                 <h3 class="company__article__header ">Wykonujemy</h3>
@@ -101,7 +97,7 @@
             </article>
         </section>
         <section class="realizations " id="realizations ">
-            <h2 class="section__header ">realizacje</h2>
+            <h2 class="realizations__header ">realizacje</h2>
             <article>
                 <p>ZAUFAŁO NAM WIELE FIRM I KLIENTÓW INDYWIDUALNYCH
                     <br> potwierdza to uczestnictwo przy większych realizacjach:</p>
@@ -129,7 +125,7 @@
             </article>
         </section>
         <section class="reference " id="reference ">
-            <h2 class="section__header">referencje</h2>
+            <h2 class="reference__header">referencje</h2>
             <p>Firmy z którymi współpracujemy:</p>
             <img class="reference__logo" src="images/firmy/skanska.png " alt="logo firmy skanska ">
             <img class="reference__logo" src="images/firmy/pebud.png " alt="logo firmy pebud ">
@@ -148,22 +144,8 @@
         <!-- qualifications -->
 
         <section class="qualifications " id="qualifications ">
-            <h2 class="section__header">uprawnienia</h2>
+            <h2 class="qualifications__headers">uprawnienia</h2>
             <figure class="qualifications__doc">
-<<<<<<< HEAD
-                <p>Główny geodeta karaju</p>
-                <p>świadectwo</p>
-                <p>nadania uprawnień w dziedzinie geodezji i kartografii</p>
-                <figcaption> <a href="images/firmy/t1.png">Paweł Bagiński  zakres 1, 4</a></figcaption>
-            </figure>
-            <figure class="qualifications__doc">
-                
-                <figcaption class="qualifications__doc__figcaption">Sławomir Gosek  zakres 1</figcaption>
-            </figure>
-            <figure class="qualifications__doc">
-               
-                <figcaption class="qualifications__doc__figcaption">Jacek Aszurkiewicz  zakres 1</figcaption>
-=======
                 <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
                 <figcaption  class="qualifications__doc__figcaption">Paweł Bagiński <br>  zakres 1, 4</figcaption>
             </figure>
@@ -174,7 +156,6 @@
             <figure class="qualifications__doc">
                 <img src="images/firmy/t1.png " alt="świadectwo nadania uprawnień ">
                 <figcaption class="qualifications__doc__figcaption">Jacek Aszurkiewicz <br> zakres 1</figcaption>
->>>>>>> origin/first-stage
             </figure>
 
             <svg class="skos" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
@@ -185,15 +166,9 @@
         <!-- CONTACT -->
 
         <section class="contact " id="contact ">
-<<<<<<< HEAD
-            <h2 class="section__header">kontakt</h2>
-            <img class="contact__logo " src="images/logo.jpg " alt="logo firmy geokart ">
-            <h3>Usługi Geodezyjne i Kartograficzne<br/>
-=======
             <h2 class="contact__header">kontakt</h2>
             <img class="contact__logo " src="images/logo.png" alt="logo firmy geokart ">
             <h3 class="contact__company">Usługi Geodezyjne i Kartograficzne<br/>
->>>>>>> origin/first-stage
                         GEO-KART S.C.</h3>
             <address class="contact__address">
                 <span class="address__elem"><b>Adres:</b>ul. Kozanowska 75/14 Wrocław</span>
